--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "baitaplon",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js"
   },
